tests/NormalTests/paczka1/fuzzy1/40009638.err
Error in line 4: eU3KsYryO S142 28,1
Error in line 3: BPdsoRSuh S486 77,2
Error in line 32: A366 A366 17,4
